syntax = "proto3";
package client;

message Block {
    bytes hash = 2;
    bytes key = 3;
    repeated uint64 hosts = 1;
}

message FileMeta {
    string name = 1;
    uint64 size  = 2;
    uint64 last_Modified = 3;
    uint64 created_at = 4;
    uint64 lock_time = 5;
    bytes key = 6;
    repeated Block blocks = 7;
}

message Directory {
    string name = 1;
    bytes key = 2;
    repeated bytes files = 3;
}

message Volume {
    string name = 1;
    bytes key = 2;
    uint32 replications = 3;
    bytes root_dir = 4;
}

message HostStash {
    uint64 host_id = 1;
    uint64 capacity = 2;
    uint64 used = 3;
    uint64 owner = 4;
}